# sailfish

./: .gitignore  Cargo.toml  LICENSE  README  api.html  build.rs  devel.md  genindex.html  index.html  kernels.html  main.py  main_gpu.py  movie-maker.py  objects.inv  plot.py  plot_euler_1d.py  plot_patches.py  plot_patches_dg.py  plot_patches_euler_rz.py  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  setups.html  workflow.html
.cargo/: config
_autosummary/: sailfish.driver.ConfigurationError.html  sailfish.driver.DriverArgs.html  sailfish.driver.DriverState.html  sailfish.driver.ExtensionError.html  sailfish.driver.append_timeseries.html  sailfish.driver.asdict.html  sailfish.driver.first_not_none.html  sailfish.driver.fromdict.html  sailfish.driver.html  sailfish.driver.init_logging.html  sailfish.driver.initial_condition.html  sailfish.driver.keyed_event.html  sailfish.driver.keyed_value.html  sailfish.driver.load_checkpoint.html  sailfish.driver.load_user_config.html  sailfish.driver.main.html  sailfish.driver.newest_chkpt_in_directory.html  sailfish.driver.run.html  sailfish.driver.simulate.html  sailfish.driver.update_dict_if_none.html  sailfish.driver.update_dict_where_none.html  sailfish.driver.update_if_none.html  sailfish.driver.update_where_none.html  sailfish.driver.write_checkpoint.html  sailfish.event.ParseRecurrenceError.html  sailfish.event.Recurrence.html  sailfish.event.RecurringEvent.html  sailfish.event.html  sailfish.html  sailfish.kernel.html  sailfish.kernel.library.Kernel.html  sailfish.kernel.library.KernelInvocation.html  sailfish.kernel.library.Library.html  sailfish.kernel.library.arglen_error.html  sailfish.kernel.library.dtype_error.html  sailfish.kernel.library.html  sailfish.kernel.library.layout_error.html  sailfish.kernel.library.to_ctypes.html  sailfish.kernel.library.type_error.html  sailfish.kernel.library.validate_constraints.html  (+158 more)
_modules/: index.html
_modules/sailfish/: driver.html  event.html  mesh.html  quad_tree.html  setup.html  setup_base.html  solver.html  solver_base.html  solvers.html  subdivide.html
_sources/: api.rst.txt  index.rst.txt  setups.rst.txt
_sources/_autosummary/: sailfish.driver.ConfigurationError.rst.txt  sailfish.driver.DriverArgs.rst.txt  sailfish.driver.DriverState.rst.txt  sailfish.driver.ExtensionError.rst.txt  sailfish.driver.append_timeseries.rst.txt  sailfish.driver.asdict.rst.txt  sailfish.driver.first_not_none.rst.txt  sailfish.driver.fromdict.rst.txt  sailfish.driver.init_logging.rst.txt  sailfish.driver.initial_condition.rst.txt  sailfish.driver.keyed_event.rst.txt  sailfish.driver.keyed_value.rst.txt  sailfish.driver.load_checkpoint.rst.txt  sailfish.driver.load_user_config.rst.txt  sailfish.driver.main.rst.txt  sailfish.driver.newest_chkpt_in_directory.rst.txt  sailfish.driver.rst.txt  sailfish.driver.run.rst.txt  sailfish.driver.simulate.rst.txt  sailfish.driver.update_dict_if_none.rst.txt  sailfish.event.rst.txt  (+177 more)
doc/: publish.sh
exper/: euler-plm.c
gpu_core/: Cargo.toml  build.rs
gpu_core/src/: buffer.rs  device.rs  device_buffer.rs  lib.cu  lib.rs
gpu_mem/: Cargo.toml  build.rs
ideas/: app_config.py  concurrent_kernels.py  config.py  configmodel.py  configuration.py  configuration_v2.py  euler.py  euler_plm.py  fmr_grid.py  fu-shu-shocktubes.json  geometry.py  gradient_estimation.py  grid.py  hydro_euler.py  index_space.py  kernels.py  lib_euler.py  lib_srhd.py  models.py  new_kernels.py  preset.py  reporting.py  sailfish0.6  sailfish0.6.py  sailfish_ui  schema.py  solver.py  solver_euler1d.py  system.py
kernel_lib/: example.c  test.py
py_sailfish/: .gitignore  main.py  plot.py  setup.py  shocktube.py
sailfish/: __init__.py  config.py  driver.py  event.py  geometry.py  kernels.py  lib_euler.py  lib_geom.py  lib_srhd.py  library.py  main.py  mesh.py  models.py  parse_api.py  preset.py  quad_tree.py  schema.py  setup.py  solver.py  solver_base.py  subdivide.py  system.py  task.py
scripts/: convergence_advection_DG.py  convergence_scdg_1d.py  main.py  plot.py  run_shocktube.py  shocktube.py  show_timeseries.py  test_kernel.py  to_kitp_timeseries.py  upsample.py  wind.py
sf_build/: Cargo.toml
sf_png/: Cargo.toml
sf_png/src/: main.rs  matplotlib_cmaps.rs
src/: cmdline.rs  error.rs  index_space.rs  lib.rs  lookup_table.rs  main.rs  main_patches.rs  mesh.rs  node_2d.rs  parse.rs  patch.rs  sailfish.h  sailfish.rs  setup.rs  setups.rs  srhd_1d.cu  state.rs  traits.rs
tools/: GeometricSourceTerms.nb  IsothermalVortex.nb  SphericalGeometrySourceTerms.nb  indep_res_analysis.py  indep_res_analysis_palmetto.py  mdot.py  movie-maker.py  plot.py  plot_euler_1d.py  residual_test  residual_test_palmetto  test_kitp_format.c  to-kitp-timeseries.py
tutorial/: 01-getting_started.md  02-checkpoints.md  03-configuration.md  getting_started.md
(+134 files in other folders)
