[package]
name = "sailfish"
version = "0.1.0"
edition = "2018"
authors = ["J. Zrake <jzrake@clemson.edu>", "A. MacFadyen <macfadyen@nyu.edu>"]
description = "fast code to simulate binary accretion"

[dependencies]
cfg-if = "1.0"
thiserror = "1.0"
kind-config = "0.2"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
kepler-two-body = { git = "https://github.com/clemson-cal/kepler-two-body" }
gpu_core = { path = "gpu_core", optional = true }

[build-dependencies]
cfg-if = "1.0"
cc = "1.0"
sf_build = { path = "sf_build" }

[features]
default = ["omp", "gpu"]
omp = []
gpu = ["gpu_core"]
