[package]
name = "sailfish"
version = "0.1.0"
edition = "2018"
authors = ["J. Zrake <jzrake@clemson.edu>", "A. MacFadyen <macfadyen@nyu.edu>"]
description = "fast code to simulate binary accretion"

[dependencies]
cfg-if          = { version = "1.0" }
thiserror       = { version = "1.0" }
kind-config     = { version = "0.2" }
rmp-serde       = { version = "0.15" }
rayon           = { version = "1.5" }
serde           = { version = "1.0", features = ["derive"] }
openmp-sys      = { version = "1.2", optional = true }
kepler-two-body = { git = "https://github.com/clemson-cal/kepler-two-body" }
gridiron        = { git = "https://github.com/clemson-cal/gridiron", default_features = false, features = ["serde", "rayon"] }
gpu_core        = { path = "gpu_core", optional = true }

[build-dependencies]
cfg-if   = { version = "1.0" }
cc       = { version = "1.0" }
sf_build = { path = "sf_build" }

[features]
default = ["omp", "gpu"]
omp = ["openmp-sys"]
gpu = ["gpu_core"]
