[package]
name = "sailfish"
description = "GPU-accelerated astrophysics gas dynamics code"
version = "0.3.5"
edition = "2018"
authors = [
	"J. Zrake <jzrake@clemson.edu>",
	"A. MacFadyen <macfadyen@nyu.edu>",
	"R. Westernacher-Schneider <wester5@clemson.edu>",
]

[dependencies]
cfg-if          = { version = "1.0" }
thiserror       = { version = "1.0" }
kind-config     = { version = "0.2" }
rmp-serde       = { version = "0.15" }
rayon           = { version = "1.5" }
serde           = { version = "1.0", features = ["derive"] }
openmp-sys      = { version = "1.2", optional = true }
kepler-two-body = { git = "https://github.com/clemson-cal/kepler-two-body" }
gridiron        = { git = "https://github.com/clemson-cal/gridiron", default_features = false, features = ["serde", "rayon"] }
gpu_core        = { path = "gpu_core", default_features = false }

[build-dependencies]
cfg-if   = { version = "1.0" }
cc       = { version = "1.0" }
sf_build = { path = "sf_build" }

[features]
default = ["omp", "gpu"]
omp = ["openmp-sys"]
gpu = ["gpu_core/gpu"]
