[metadata]
name = sailfish
version = 0.4.0
author = Jonathan Zrake
author_email = jzrake@clemson.edu
description = GPU accelerated astrophysical gasdynamics code
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/clemson-cal/sailfish
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
