[package]
name = "gpu_core"
version = "0.1.0"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if   = { version = "1.0" }

[build-dependencies]
cc = "1.0"
sf_build = { path = "../sf_build" }

[features]
default = ["gpu"]
gpu = [] # without GPU feature, this crate is just stubs
